recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  for (i<-0 to 3){
    carre()
  droite()
  avance(100)
    
  }
  
  
}

def carre(){
  for (i<- 0 to 3){
    avance(100)
    droite()
  }
  
  
}